# User_Service

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker_compose/: api.yaml
src/: config.py
src/application/common/: command.py  event.py  exceptions.py  query.py
src/application/token/commands/: __init__.py  create_token.py  create_token_pair.py  refresh_token.py
src/application/token/constants/: __init__.py
src/application/token/dto/: __init__.py  token.py  token_pair.py
src/application/token/exceptions/: token.py
src/application/token/queries/: __init__.py  get_oid_token.py
src/application/user/commands/: __init__.py  create_user.py  login_user.py  registration_user.py  user.py
src/application/user/dto/: __init__.py  login_user.py  user.py
src/application/user/interfaces/: __init__.py
src/application/user/queries/: __init__.py  get_user_by_oid.py  get_user_by_token.py  get_user_by_username.py  user.py
src/domain/auth/entities/: access_token.py  (+1 more)
src/domain/common/: __init__.py  aggregate_root.py  entity.py  event.py  exception.py  exceptions.py  value_object.py
src/infrastructure/: ioc.py  uow.py
src/infrastructure/mediator/: __init__.py  main.py  mediator.py
src/infrastructure/memory/: __init__.py  session.py  uow.py
src/presentation/api/: exception_handlers.py  main.py  middleware.py
src/presentation/cli/: __main__.py  utils.py
src/tests/: config.py  conftest.py  ioc.py
src/tests/application/: conftest.py  test_user.py
tests/: conftest.py  ioc.py
tests/application/: test_user.py
(+33 files in other folders)
