[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Simonov (Fast Code)",email = "fast_code@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar (>=2.14.0,<3.0.0)",
    "dishka (>=1.4.2,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
